[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-events"
version = "0.1.0"
description = "Event bus and pub/sub system for multi-agent coordination — zero infrastructure, zero dependencies."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Darshankumar Joshi", email = "darshjme@gmail.com" }]
keywords = ["event-bus", "pub-sub", "multi-agent", "events", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = []   # zero runtime dependencies

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-events"
Repository = "https://github.com/darshjme-codes/agent-events"
Issues = "https://github.com/darshjme-codes/agent-events/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
